--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -12,7 +12,7 @@
 <li><a href="../pt-br/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de propriedades (12% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de propriet&#259;&#539;i (0% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Property editor (0% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; (8% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074; (12% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Property_View.html" class="mw-pt-progress mw-pt-progress--low" title="Property editor (0% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -96,7 +96,7 @@ App::PropertyVector
 <dl><dd><ul><li><b>P&#345;echodn&aacute;</b>: pokud je aktivn&iacute;, nastav&iacute; vlastnost jako p&#345;echodnou. Hodnota p&#345;echodn&eacute; vlastnosti se neukl&aacute;d&aacute; do souboru. P&#345;i otev&#345;en&iacute; souboru se na&#269;te jej&iacute; v&yacute;choz&iacute; hodnota.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Dot&#269;en&aacute;</b>: pokud je aktivn&iacute;, objekt se stane dot&#269;en&yacute;m a p&#345;ipraven&yacute;m k p&#345;epo&#269;&iacute;t&aacute;n&iacute;.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Vyhodnotit p&#345;i obnoven&iacute;</b>: pokud je aktivn&iacute;, vlastnost se vyhodnot&iacute; p&#345;i obnoven&iacute; dokumentu.</li></ul></dd></dl>
-<dl><dd><ul><li><b>CopyOnChange</b>: if active, the property is copied when changed in a Link. The Link's <span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Link Copy On Change</b> property must be set to <code>Tracking</code> or <code>Enabled</code> for this to work. This is related to <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?p=738833#p738833">Variant Links</a>.</li></ul></dd></dl>
+<dl><dd><ul><li><b>Kop&iacute;rovat p&#345;i zm&#283;n&#283;</b>: pokud je aktivn&iacute;, vlastnost se p&#345;i zm&#283;n&#283; v odkazu zkop&iacute;ruje. Aby tato funkce fungovala, mus&iacute; b&yacute;t vlastnost odkazu <span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Kop&iacute;rov&aacute;n&iacute; odkazu p&#345;i zm&#283;n&#283;</b> nastavena na <code>Sledov&aacute;n&iacute;</code> nebo <code>Povoleno</code>. To souvis&iacute; s <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?p=738833#p738833">Variantami odkaz&#367;</a>.</li></ul></dd></dl>
 <p><span id="Scripting"></span>
 </p>
 <h2><span id="Skriptov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Skriptov&aacute;n&iacute;">Skriptov&aacute;n&iacute;</span></h2>
@@ -173,35 +173,35 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122202521
+Cached time: 20260122202836
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.109 seconds
-Real time usage: 0.170 seconds
+CPU time usage: 0.142 seconds
+Real time usage: 0.387 seconds
 Preprocessor visited node count: 706/1000000
-Post&#8208;expand include size: 32545/2097152 bytes
-Template argument size: 12688/2097152 bytes
+Post&#8208;expand include size: 32592/2097152 bytes
+Template argument size: 12735/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3984/5000000 bytes
+Unstrip post&#8208;expand size: 3988/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.642      1 -total
- 23.55%   11.218      1 Template:Std_Base_navi/cs
- 15.98%    7.615      1 Template:Interface_navi/cs
- 14.40%    6.860      3 Template:Navigation_menu_2
- 11.83%    5.638      1 Template:Userdocnavi/cs
-  9.23%    4.397      1 Template:PropertyData
-  6.36%    3.031     26 Template:MenuCommand
-  5.68%    2.707      2 Template:Value
-  4.71%    2.244      1 Template:Code
-  4.60%    2.192      2 Template:Docnav
+100.00%  103.829      1 -total
+ 17.44%   18.103      1 Template:Std_Base_navi/cs
+ 17.08%   17.730      3 Template:Navigation_menu_2
+ 10.83%   11.246      1 Template:PropertyData
+  9.85%   10.231      1 Template:Interface_navi/cs
+  8.91%    9.253      1 Template:Variable
+  7.96%    8.269      1 Template:Userdocnavi/cs
+  6.48%    6.733      2 Template:Docnav
+  6.38%    6.620      1 Template:Code
+  5.60%    5.815      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122202521 and revision id 1742721. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122202835 and revision id 1742723. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
