--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -173,12 +173,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122202836
+Cached time: 20260122202843
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.142 seconds
-Real time usage: 0.387 seconds
+CPU time usage: 0.128 seconds
+Real time usage: 0.522 seconds
 Preprocessor visited node count: 706/1000000
 Post&#8208;expand include size: 32592/2097152 bytes
 Template argument size: 12735/2097152 bytes
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 3988/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  103.829      1 -total
- 17.44%   18.103      1 Template:Std_Base_navi/cs
- 17.08%   17.730      3 Template:Navigation_menu_2
- 10.83%   11.246      1 Template:PropertyData
-  9.85%   10.231      1 Template:Interface_navi/cs
-  8.91%    9.253      1 Template:Variable
-  7.96%    8.269      1 Template:Userdocnavi/cs
-  6.48%    6.733      2 Template:Docnav
-  6.38%    6.620      1 Template:Code
-  5.60%    5.815      1 Template:Caption
+100.00%  141.695      1 -total
+ 29.51%   41.813      3 Template:Navigation_menu_2
+ 23.22%   32.900      1 Template:Userdocnavi/cs
+ 20.46%   28.994      1 Template:Std_Base_navi/cs
+ 13.61%   19.281      1 Template:Interface_navi/cs
+ 11.83%   16.761      1 Template:PropertyData
+  6.10%    8.645      1 Template:Code
+  5.91%    8.372      6 Template:Incode
+  3.44%    4.876      2 Template:Value
+  2.92%    4.143      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122202835 and revision id 1742723. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122202842 and revision id 1742725. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
