--- a/wiki/cs/Property_View.html
+++ b/wiki/cs/Property_View.html
@@ -100,7 +100,7 @@ App::PropertyVector
 <p><span id="Scripting"></span>
 </p>
 <h2><span id="Skriptov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Skriptov&aacute;n&iacute;">Skriptov&aacute;n&iacute;</span></h2>
-<p>Viz <a href="../index.php?title=FeaturePython_Custom_Properties/cs&amp;action=edit&amp;redlink=1.html" class="new" title="FeaturePython Custom Properties/cs (page does not exist)">FeaturePython U&#382;ivatelsk&eacute; vlastnosti</a>.
+<p>Viz <a href="../FeaturePython_Custom_Properties.html" title="FeaturePython Custom Properties">FeaturePython U&#382;ivatelsk&eacute; vlastnosti</a>.
 </p><p><span id="Preferences"></span>
 </p>
 <h2><span id="P.C5.99edvolby"></span><span class="mw-headline" id="P&#345;edvolby">P&#345;edvolby</span></h2>
@@ -173,12 +173,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122202843
+Cached time: 20260122203042
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.128 seconds
-Real time usage: 0.522 seconds
+CPU time usage: 0.099 seconds
+Real time usage: 0.163 seconds
 Preprocessor visited node count: 706/1000000
 Post&#8208;expand include size: 32592/2097152 bytes
 Template argument size: 12735/2097152 bytes
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 3988/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  141.695      1 -total
- 29.51%   41.813      3 Template:Navigation_menu_2
- 23.22%   32.900      1 Template:Userdocnavi/cs
- 20.46%   28.994      1 Template:Std_Base_navi/cs
- 13.61%   19.281      1 Template:Interface_navi/cs
- 11.83%   16.761      1 Template:PropertyData
-  6.10%    8.645      1 Template:Code
-  5.91%    8.372      6 Template:Incode
-  3.44%    4.876      2 Template:Value
-  2.92%    4.143      1 Template:Caption
+100.00%   46.199      1 -total
+ 17.63%    8.145      1 Template:Std_Base_navi/cs
+ 13.98%    6.460      3 Template:Navigation_menu_2
+ 12.53%    5.790      1 Template:Interface_navi/cs
+  9.84%    4.545      1 Template:Userdocnavi/cs
+  9.73%    4.496      1 Template:PropertyData
+  7.12%    3.290      1 Template:Code
+  6.52%    3.010     26 Template:MenuCommand
+  5.71%    2.640      2 Template:Docnav
+  4.93%    2.278      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122202842 and revision id 1742725. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24384-0!canonical and timestamp 20260122203041 and revision id 1742727. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
