--- a/wiki/cs/Navigation_Cube.html
+++ b/wiki/cs/Navigation_Cube.html
@@ -25,7 +25,7 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
-<p><b>Naviga&#269;n&iacute; kostka</b> poskytuje vizu&aacute;ln&iacute; informace o orientaci kamery v aktu&aacute;ln&iacute;m <a href="../index.php?title=3D_View/cs&amp;action=edit&amp;redlink=1.html" class="new" title="3D View/cs (page does not exist)">3D zobrazen&iacute;</a> a lze ji pou&#382;&iacute;t k jej&iacute; zm&#283;n&#283;. Ve v&yacute;choz&iacute;m nastaven&iacute; je viditeln&aacute; a nach&aacute;z&iacute; se v prav&eacute;m horn&iacute;m rohu zobrazen&iacute;.
+<p><b>Naviga&#269;n&iacute; kostka</b> poskytuje vizu&aacute;ln&iacute; informace o orientaci kamery v aktu&aacute;ln&iacute;m <a href="../3D_View.html" title="3D View">3D zobrazen&iacute;</a> a lze ji pou&#382;&iacute;t k jej&iacute; zm&#283;n&#283;. Ve v&yacute;choz&iacute;m nastaven&iacute; je viditeln&aacute; a nach&aacute;z&iacute; se v prav&eacute;m horn&iacute;m rohu zobrazen&iacute;.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Navigation_Cube_Example.png&amp;filetimestamp=20230607151940&amp;.html" class="mw-file-description"><img src="../File/Navigation_Cube_Example.png" decoding="async" width="282" height="271" class="mw-file-element" data-file-width="282" data-file-height="271"></a></span>
 </p><p>Naviga&#269;n&iacute; kostka se skl&aacute;d&aacute; z n&#283;kolika &#269;&aacute;st&iacute;:
 </p>
@@ -247,23 +247,23 @@
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../cs/Getting_started.html" title="Getting started/cs">Getting started</a></b></li>
 <li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../cs/Compile_on_Docker.html" title="Compile on Docker/cs">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
-<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
+<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../cs/Interface.html" title="Interface/cs">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
 <li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../cs/Material_Workbench.html" title="Material Workbench/cs">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../cs/Testing.html" title="Testing/cs">Test Framework</a></li></ul>
 <hr>
-<ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
+<ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../cs/External_workbenches.html" title="External workbenches/cs">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
 <hr>
 <ul><li><b>Hubs:</b> <a href="../cs/User_hub.html" title="User hub/cs">User hub</a>, <a href="../cs/Power_users_hub.html" title="Power users hub/cs">Power users hub</a>, <a href="../cs/Developer_hub.html" title="Developer hub/cs">Developer hub</a></li></ul></div>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115092421
+Cached time: 20260122203435
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.118 seconds
+CPU time usage: 0.090 seconds
+Real time usage: 0.322 seconds
 Preprocessor visited node count: 408/1000000
 Post&#8208;expand include size: 9449/2097152 bytes
 Template argument size: 3259/2097152 bytes
@@ -274,19 +274,19 @@ Unstrip post&#8208;expand size: 3003/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.734      1 -total
- 26.36%    4.674      1 Template:Userdocnavi/cs
- 20.76%    3.681     14 Template:Value
- 13.53%    2.400      1 Template:Navigation_menu_2
- 11.97%    2.123      2 Template:Docnav
-  9.72%    1.724     15 Template:Incode
-  8.57%    1.520     13 Template:MenuCommand
-  8.35%    1.481      1 Template:TOCright
-  7.56%    1.340      7 Template:Version
-  5.85%    1.037      1 Template:Button
+100.00%   50.764      1 -total
+ 29.21%   14.827     14 Template:Value
+ 21.65%   10.992      1 Template:Userdocnavi/cs
+ 15.95%    8.097      1 Template:Button
+ 14.87%    7.549     15 Template:Incode
+ 10.92%    5.541      1 Template:TOCright
+ 10.41%    5.284      2 Template:Docnav
+  5.04%    2.556      1 Template:Navigation_menu_2
+  4.16%    2.113     13 Template:MenuCommand
+  3.61%    1.830      7 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410187-0!canonical and timestamp 20260115092421 and revision id 1738585. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410187-0!canonical and timestamp 20260122203434 and revision id 1742729. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
