--- a/wiki/cs/Navigation_Cube.html
+++ b/wiki/cs/Navigation_Cube.html
@@ -56,12 +56,12 @@
 <div class="mw-translate-fuzzy">
 <p>Kliknut&iacute;m na malou kostku v prav&eacute;m doln&iacute;m rohu naviga&#269;n&iacute; kostky se zobraz&iacute; menu s n&aacute;sleduj&iacute;c&iacute;mi mo&#382;nostmi:
 </p>
-<ul><li><b><span typeof="mw:File"><a href="../index.php?title=Std_OrthographicCamera.svg&amp;filetimestamp=20240704204344&amp;.html" class="mw-file-description"><img src="../File/Std_OrthographicCamera.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Std_OrthographicCamera/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std OrthographicCamera/cs (page does not exist)">Ortogon&aacute;ln&iacute; pohled</a></b>: p&#345;epne do ortogon&aacute;ln&iacute;ho pohledu.</li>
-<li><b><span typeof="mw:File"><a href="../index.php?title=Std_PerspectiveCamera.svg&amp;filetimestamp=20240704204419&amp;.html" class="mw-file-description"><img src="../File/Std_PerspectiveCamera.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Std_PerspectiveCamera/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std PerspectiveCamera/cs (page does not exist)">Perspektivn&iacute; zobrazen&iacute;</a></b>: p&#345;epne do perspektivn&iacute;ho zobrazen&iacute;.</li>
-<li><b><span typeof="mw:File"><a href="../index.php?title=Std_ViewIsometric.svg&amp;filetimestamp=20240704204910&amp;.html" class="mw-file-description"><img src="../File/Std_ViewIsometric.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Std_ViewIsometric/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std ViewIsometric/cs (page does not exist)">Izometrick&yacute;</a></b>: p&#345;epne do izometrick&eacute;ho zobrazen&iacute;.</li>
-<li>{{MenuCommand|<span typeof="mw:File"><a href="../index.php?title=Std_ViewFitAll.svg&amp;filetimestamp=20240704204734&amp;.html" class="mw-file-description"><img src="../File/Std_ViewFitAll.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Std_ViewFitAll/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std ViewFitAll/cs (page does not exist)">Zobrazit v&scaron;e</a>: p&#345;ibl&iacute;&#382;&iacute; a posune kameru tak, aby se v&scaron;echny viditeln&eacute; objekty ve&scaron;ly do z&aacute;b&#283;ru.</li>
-<li><b><span typeof="mw:File"><a href="../index.php?title=Std_ViewFitSelection.svg&amp;filetimestamp=20240704204801&amp;.html" class="mw-file-description"><img src="../File/Std_ViewFitSelection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Std_ViewFitSelection/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std ViewFitSelection/cs (page does not exist)">Zobrazit v&yacute;b&#283;r</a></b>: p&#345;ibl&iacute;&#382;&iacute; a posune kameru tak, aby se v&scaron;echny vybran&eacute; objekty ve&scaron;ly do z&aacute;b&#283;ru. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li>
-<li><b><span typeof="mw:File"><a href="../index.php?title=Std_AlignToSelection.svg&amp;filetimestamp=20240705143347&amp;.html" class="mw-file-description"><img src="../File/Std_AlignToSelection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Std_AlignToSelection/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AlignToSelection/cs (page does not exist)">Zarovnat podle v&yacute;b&#283;ru</a></b>: nasm&#283;ruje kameru v zobrazen&iacute; v opa&#269;n&eacute;m sm&#283;ru ne&#382; je norm&aacute;la rovinn&eacute; plochy nebo v opa&#269;n&eacute;m sm&#283;ru ne&#382; je p&#345;&iacute;m&aacute; hrana. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li>
+<ul><li><b><span typeof="mw:File"><a href="../index.php?title=Std_OrthographicCamera.svg&amp;filetimestamp=20240704204344&amp;.html" class="mw-file-description"><img src="../File/Std_OrthographicCamera.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_OrthographicCamera.html" title="Std OrthographicCamera">Ortogon&aacute;ln&iacute; pohled</a></b>: p&#345;epne do ortogon&aacute;ln&iacute;ho pohledu.</li>
+<li><b><span typeof="mw:File"><a href="../index.php?title=Std_PerspectiveCamera.svg&amp;filetimestamp=20240704204419&amp;.html" class="mw-file-description"><img src="../File/Std_PerspectiveCamera.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_PerspectiveCamera.html" title="Std PerspectiveCamera">Perspektivn&iacute; zobrazen&iacute;</a></b>: p&#345;epne do perspektivn&iacute;ho zobrazen&iacute;.</li>
+<li><b><span typeof="mw:File"><a href="../index.php?title=Std_ViewIsometric.svg&amp;filetimestamp=20240704204910&amp;.html" class="mw-file-description"><img src="../File/Std_ViewIsometric.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_ViewIsometric.html" title="Std ViewIsometric">Izometrick&yacute;</a></b>: p&#345;epne do izometrick&eacute;ho zobrazen&iacute;.</li>
+<li>{{MenuCommand|<span typeof="mw:File"><a href="../index.php?title=Std_ViewFitAll.svg&amp;filetimestamp=20240704204734&amp;.html" class="mw-file-description"><img src="../File/Std_ViewFitAll.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_ViewFitAll.html" title="Std ViewFitAll">Zobrazit v&scaron;e</a>: p&#345;ibl&iacute;&#382;&iacute; a posune kameru tak, aby se v&scaron;echny viditeln&eacute; objekty ve&scaron;ly do z&aacute;b&#283;ru.</li>
+<li><b><span typeof="mw:File"><a href="../index.php?title=Std_ViewFitSelection.svg&amp;filetimestamp=20240704204801&amp;.html" class="mw-file-description"><img src="../File/Std_ViewFitSelection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_ViewFitSelection.html" title="Std ViewFitSelection">Zobrazit v&yacute;b&#283;r</a></b>: p&#345;ibl&iacute;&#382;&iacute; a posune kameru tak, aby se v&scaron;echny vybran&eacute; objekty ve&scaron;ly do z&aacute;b&#283;ru. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li>
+<li><b><span typeof="mw:File"><a href="../index.php?title=Std_AlignToSelection.svg&amp;filetimestamp=20240705143347&amp;.html" class="mw-file-description"><img src="../File/Std_AlignToSelection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_AlignToSelection.html" title="Std AlignToSelection">Zarovnat podle v&yacute;b&#283;ru</a></b>: nasm&#283;ruje kameru v zobrazen&iacute; v opa&#269;n&eacute;m sm&#283;ru ne&#382; je norm&aacute;la rovinn&eacute; plochy nebo v opa&#269;n&eacute;m sm&#283;ru ne&#382; je p&#345;&iacute;m&aacute; hrana. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li>
 <li><b>Pohybliv&aacute; naviga&#269;n&iacute; kostka</b>: pokud je za&scaron;krtnuto toto pol&iacute;&#269;ko (<span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>), lze celou naviga&#269;n&iacute; kostku p&#345;esunout tak, &#382;e podr&#382;&iacute;te lev&eacute; tla&#269;&iacute;tko my&scaron;i kdekoli na hlavn&iacute; kostce a p&#345;et&aacute;hnete ji. To slou&#382;&iacute; k do&#269;asn&eacute;mu p&#345;esunut&iacute; kostky z cesty. Pomoc&iacute; <a href="#Advanced_parameters/cs">pokro&#269;il&yacute;ch parametr&#367;</a> OffsetX a OffsetY lze kostku trvale p&#345;em&iacute;stit, viz  n&iacute;&#382;e.</li></ul>
 </div>
 <p><span id="Customization"></span>
@@ -258,15 +258,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122203537
+Cached time: 20260122203756
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.099 seconds
-Real time usage: 0.156 seconds
+CPU time usage: 0.082 seconds
+Real time usage: 0.165 seconds
 Preprocessor visited node count: 408/1000000
-Post&#8208;expand include size: 9449/2097152 bytes
-Template argument size: 3259/2097152 bytes
+Post&#8208;expand include size: 9434/2097152 bytes
+Template argument size: 3244/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -274,19 +274,19 @@ Unstrip post&#8208;expand size: 3003/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.580      1 -total
- 28.49%    8.428      1 Template:Userdocnavi/cs
- 20.25%    5.991     14 Template:Value
- 10.84%    3.206      1 Template:Navigation_menu_2
- 10.42%    3.083      1 Template:Button
-  9.61%    2.844      2 Template:Docnav
-  9.37%    2.770     15 Template:Incode
-  8.24%    2.436     13 Template:MenuCommand
-  7.63%    2.258      1 Template:TOCright
-  7.22%    2.135      7 Template:Version
+100.00%   28.146      1 -total
+ 28.87%    8.127     14 Template:Value
+ 22.12%    6.226      1 Template:Userdocnavi/cs
+ 13.27%    3.735     15 Template:Incode
+ 10.38%    2.922      1 Template:Button
+  9.34%    2.629      7 Template:Version
+  8.40%    2.365      2 Template:Docnav
+  7.90%    2.223     13 Template:MenuCommand
+  7.68%    2.161      1 Template:Navigation_menu_2
+  4.59%    1.293      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410187-0!canonical and timestamp 20260122203537 and revision id 1742733. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410187-0!canonical and timestamp 20260122203756 and revision id 1742735. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
