--- a/wiki/cs/Navigation_Cube.html
+++ b/wiki/cs/Navigation_Cube.html
@@ -74,7 +74,7 @@
 </p><p><span id="Advanced_parameters"></span>
 </p>
 <h3><span id="Pokro.C4.8Dil.C3.A9_parametry"></span><span class="mw-headline" id="Pokro&#269;il&eacute;_parametry">Pokro&#269;il&eacute; parametry</span></h3>
-<p>N&#283;kter&eacute; pokro&#269;il&eacute; parametry naviga&#269;n&iacute;ho kostky nelze v <a href="../Preferences_Editor.html#Navigation/cs" title="Preferences Editor">Editoru p&#345;edvoleb</a> zm&#283;nit. Tyto parametry lze nastavit manu&aacute;ln&#283; v <a href="../index.php?title=Std_DlgParameter/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std DlgParameter/cs (page does not exist)">Editoru parametr&#367;</a>.
+<p>N&#283;kter&eacute; pokro&#269;il&eacute; parametry naviga&#269;n&iacute;ho kostky nelze v <a href="../Preferences_Editor.html#Navigation/cs" title="Preferences Editor">Editoru p&#345;edvoleb</a> zm&#283;nit. Tyto parametry lze nastavit manu&aacute;ln&#283; v <a href="../Std_DlgParameter.html" title="Std DlgParameter">Editoru parametr&#367;</a>.
 </p><p>Manu&aacute;ln&iacute; nastaven&iacute; barev:
 </p>
 <ol><li>Spus&#357;te <span typeof="mw:File"><a href="../index.php?title=Std_DlgParameter.svg&amp;filetimestamp=20240528121001&amp;.html" class="mw-file-description"><img src="../File/Std_DlgParameter.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Std_DlgParameter/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std DlgParameter/cs (page does not exist)">Editor parametr&#367;</a>.</li>
@@ -258,12 +258,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122203756
+Cached time: 20260122203944
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.165 seconds
+CPU time usage: 0.092 seconds
+Real time usage: 0.188 seconds
 Preprocessor visited node count: 408/1000000
 Post&#8208;expand include size: 9434/2097152 bytes
 Template argument size: 3244/2097152 bytes
@@ -274,19 +274,19 @@ Unstrip post&#8208;expand size: 3003/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.146      1 -total
- 28.87%    8.127     14 Template:Value
- 22.12%    6.226      1 Template:Userdocnavi/cs
- 13.27%    3.735     15 Template:Incode
- 10.38%    2.922      1 Template:Button
-  9.34%    2.629      7 Template:Version
-  8.40%    2.365      2 Template:Docnav
-  7.90%    2.223     13 Template:MenuCommand
-  7.68%    2.161      1 Template:Navigation_menu_2
-  4.59%    1.293      1 Template:TOCright
+100.00%   36.617      1 -total
+ 22.52%    8.245      1 Template:Userdocnavi/cs
+ 20.04%    7.337     14 Template:Value
+ 16.35%    5.986      2 Template:Docnav
+ 10.97%    4.015     13 Template:MenuCommand
+ 10.22%    3.744     15 Template:Incode
+  8.70%    3.187      1 Template:Navigation_menu_2
+  8.62%    3.157      7 Template:Version
+  7.58%    2.774      1 Template:TOCright
+  5.99%    2.194      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410187-0!canonical and timestamp 20260122203756 and revision id 1742735. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410187-0!canonical and timestamp 20260122203944 and revision id 1742737. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
