--- a/wiki/cs/Selection_methods.html
+++ b/wiki/cs/Selection_methods.html
@@ -26,7 +26,7 @@
 </p><p><span id="3D_view"></span>
 </p>
 <h2><span id="3D_zobrazen.C3.AD"></span><span class="mw-headline" id="3D_zobrazen&iacute;">3D zobrazen&iacute;</span></h2>
-<p>Ve <a href="../index.php?title=3D_view/cs&amp;action=edit&amp;redlink=1.html" class="new" title="3D view/cs (page does not exist)">3D zobrazen&iacute;</a> existuje n&#283;kolik zp&#367;sob&#367; v&yacute;b&#283;ru objekt&#367;.
+<p>Ve <a href="../3D_view.html" class="mw-redirect" title="3D view">3D zobrazen&iacute;</a> existuje n&#283;kolik zp&#367;sob&#367; v&yacute;b&#283;ru objekt&#367;.
 </p><p><span id="Simple_selection"></span>
 </p>
 <h3><span id="Jednoduch.C3.BD_v.C3.BDb.C4.9Br"></span><span class="mw-headline" id="Jednoduch&yacute;_v&yacute;b&#283;r">Jednoduch&yacute; v&yacute;b&#283;r</span></h3>
@@ -115,12 +115,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122204601
+Cached time: 20260122204613
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.379 seconds
+CPU time usage: 0.097 seconds
+Real time usage: 0.337 seconds
 Preprocessor visited node count: 284/1000000
 Post&#8208;expand include size: 9861/2097152 bytes
 Template argument size: 2794/2097152 bytes
@@ -131,19 +131,19 @@ Unstrip post&#8208;expand size: 4592/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  255.690      1 -total
- 78.83%  201.566      3 Template:Code
-  4.74%   12.126      1 Template:Userdocnavi/cs
-  3.75%    9.589      1 Template:MenuCommand
-  3.13%    7.994      1 Template:Caption
-  2.24%    5.737      4 Template:KEY
-  2.18%    5.574      2 Template:Docnav
-  1.89%    4.827      1 Template:Button
-  1.00%    2.553      1 Template:Navigation_menu_2
-  0.97%    2.472      3 Template:Incode
+100.00%  223.337      1 -total
+ 82.53%  184.322      3 Template:Code
+  4.88%   10.892      1 Template:Userdocnavi/cs
+  2.33%    5.199      1 Template:Button
+  1.94%    4.327      1 Template:TOCright
+  1.79%    4.001      2 Template:Docnav
+  1.64%    3.659      3 Template:Incode
+  1.58%    3.522      1 Template:Navigation_menu_2
+  1.47%    3.274      1 Template:Caption
+  1.32%    2.943      4 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122204600 and revision id 1742743. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410149-0!canonical and timestamp 20260122204612 and revision id 1742745. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
